list & task create / begin list controller / init front
