# backend/src/lists/dto/createList.dto.ts
@@ -1,0 +1,4 @@
+export class CreateListDto {
+    title: string
+    endDate: string
+}
